- P4A_Dir_Source's cache was removed due to refactoring
- P4A_Simple_Edit_Mask now supports empty $source constructor param
  (default is the mask name)
- P4A_Field::setUploadDirectlyToDir() and getUploadDirectlyToDir() methods
  were added to allow direct upload to a directory when manually build
  fields untied to a P4A_Data_Source

3.2.2
- P4A_Table's image cols are now centered horizontally
- P4A_Button::setTooltip() and getTooltip() methods were added
- afterupload event typo was fixed
- P4A_Thumbnail_Generator::renderToFile() method was added
- P4A_Mask::getSource() method was added
- Zend Framework was updated to 1.7.7
- a bug with P4A_Fieldset theme was fixed (thanks to Mario Spada)
- P4A_DB::singleton() DB type verification is now case insensitive
  (bug #2643785) (thanks to BES)
- a few modifications were done on screen.css file for a better theme
  result (thanks to pbond81)
- The way we managed P4A_Validate translations was rewritten to fit the
  new rules by Zend Framework (we need your help translating the new
  messages now http://tinyurl.com/au5bvb)
- a bug with P4A_DB_Source::setWhere() method was fixed
- translations were synchronized
- auto file inclusion system was updated to avoid reading Mac hidden files
- a bug with P4A_DB_Source::addGroup() method was solved (internal syntax
  change due to a Zend Framework change)
- p4a_load_js() javascript function was updated to avoid errors if no callback
  function is passed

3.2.1
- Zend Framework was updated to 1.7.4
- PEAR::Net_Useragent_Detect was updated to 2.5.0
- jQuery::form was updated to 2.19
- P4A_DB_Source::setQuery() now strips out final semicolon from the passed
  SQL query (if present) (bug #2557215)
- P4A_DB_Source::setWhere() now calls a firstRow() if the DB_Source isn't
  in the "new row" state (bug #2316271)
- P4A_Filename2File() now uses the fileinfo module if no mime type
  is detected otherways (bug #2121565)
- a bug with P4A_Field::getAsDate() and Internet Explorer was fixed